# ga-pid-server

./: .gitignore  Dockerfile  Dockerfile.test  README.md  deployment.yaml  pyproject.toml
.github/workflows/: deploy_on_push.yml  pipeline.yml  test_on_pr.yml
conf/: httpd.conf
conf/sites/: data.surroundaustralia.com.conf  extra_pid_rules.conf  gapid.surroundaustralia.com.conf  geopid.surroundaustralia.com.conf  pid.conf
htdocs/: index.html
htdocs/style/: surround.css
htdocs/w3id.org/: profile.html  profile.ttl
tests/: PIDupgrade.data.json  extra-rule-cases.json  rule-cases.json  test_PID.py  test_redirects.py  test_resolutions.py
